--- a/Наш бизнес план.md
+++ b/Наш бизнес план.md
@@ -3,4 +3,4 @@
 Наша игра будет распространяться условно бесплатно, доход мы планируем получать от внутриигровых покупок и рекламы.
 Серьёзные затраты в основном будут идти по началу на рекламу для большего распространения нашей игры.
 Потом же затраты будут идти на дальнейшие развитие игры, а именно на улучшение графики, добавление новых режимов игры, расширение косметических предметов.
-Также часть затрат будет идти на устранение багов и других проблем в игре.
+Также часть затрат будет идти на устранение багов, ошибок и других проблем в игре.
