Update Обзор нашей команды.md

--- a/Обзор нашей команды.md
+++ b/Обзор нашей команды.md
@@ -1,10 +1,10 @@
 Наша команда: 
 
-- Фильчагин Сергей Павлович - разносторонне эрудирован, имеет пространственное мышление.
+- Фильчагин Сергей Павлович - разносторонне эрудирован, имеет пространственное мышление;
   
-- Аншаков Кирилл Игоревич - творческий и пунктуальный человек, любящий продумывать всё до мелочей.
+- Аншаков Кирилл Игоревич - творческий и пунктуальный человек, любящий продумывать всё до мелочей;
   
-- Рублев Александр Александрович - педантичный и целеустремленный человек, который полностью отдает себя делу.
+- Рублев Александр Александрович - педантичный и целеустремленный человек, который полностью отдает себя делу;
   
 - Меркулов Владислав Александрович - трудолюбивый и живущий своим делом человек. Пунктуален и ответственен.
   
