--- a/Обзор нашей команды.md
+++ b/Обзор нашей команды.md
@@ -1,13 +1,12 @@
 Наша команда: 
 
-	Фильчагин Сергей Павлович - разносторонне эрудирован, имеет пространственное мышление.
+- Фильчагин Сергей Павлович - разносторонне эрудирован, имеет пространственное мышление;
   
-	Аншаков Кирилл Игоревич - творческий и пунктуальный человек, любящий продумывать всё до мелочей.
+- Аншаков Кирилл Игоревич - творческий и пунктуальный человек, любящий продумывать всё до мелочей;
   
-	Рублев Александр Александрович - педантичный и целеустремленный человек, который полностью отдает себя делу.
+- Рублев Александр Александрович - педантичный и целеустремленный человек, который полностью отдает себя делу;
   
-	Меркулов Владислав Александрович - трудолюбивый и живущий своим делом человек. Пунктуален и ответственен.
+- Меркулов Владислав Александрович - трудолюбивый и живущий своим делом человек. Пунктуален и ответственен.
   
-
-	В нашей команде всего 4 человека, но каждый из нас - это творческий человек, живущий нашим делом. 
-  В нашей команде есть как программисты и дизайнеры, так и люди с руководящей жилкой, поэтому наш коллектив разносторонен и при этом сплочен, что создает благоприятные условия для самой  эффективной работы.
+В нашей команде всего 4 человека, но каждый из нас - это творческий человек, живущий нашим делом. 
+В нашей команде есть как программисты и дизайнеры, так и люди с руководящей жилкой, поэтому наш коллектив разносторонен и при этом сплочен, что создает благоприятные условия для самой  эффективной работы.
