--- a/Конкуренты.md
+++ b/Конкуренты.md
@@ -8,6 +8,6 @@
  - Вознаграждения за место в таблице (чем выше рейтинг, тем более редкий костюм и другую косметику будет получать игрок);
  - Большое разнообразие косметических предметов (костюмы, арены, аватарки, статусы, эффекты и т.д.). 
  
-У конкурентов, конечно, есть всё вышеперечисленное, но не всё сразу и в одной игре. 
+У конкурентов, конечно, есть всё вышеперечисленное, но не всё сразу и не в одной игре. 
 Поэтому наша игра будет содержать в себе все самые лучшие черты, присущие разным проектам по отдельности. 
-Таким образом, наш продукт будет отличатся от других, что поможет ему завоевать достаточную долю рынка.
+Таким образом, наш продукт будет отличаться от других, что поможет ему завоевать достаточную долю рынка.
